tweak to note display on project page to stop wrapping around note link icon
  divs for the project note
  adding margin to prevent the note from wrapping around the link icon

--- a/public/stylesheets/standard.css
+++ b/public/stylesheets/standard.css
@@ -550,6 +550,10 @@ div.note_wrapper p {
     display: inline;
 }
 
+div.note_note {
+    margin-left:24px;
+}
+
 div.note_footer {
     border-top: 1px solid #999;
     padding-top: 3px;
